data/derived/sp14/progs/unify/prog0534.ml.out
Characters 66-69:
  let (l, r) = additivePersAndRoot abs(n) in
                                   ^^^
Error: This expression has type int -> int
       but an expression was expected of type int
